# gen/http/inventory/server/encode_decode.go
@@ -372,26 +372,11 @@ func marshalInventoryviewsStoredInventoryViewToStoredInventoryResponseTiny(v *in
 // *inventoryviews.StoredItemView.
 func marshalInventoryviewsStoredItemViewToStoredItemResponseTiny(v *inventoryviews.StoredItemView) *StoredItemResponseTiny {
 	res := &StoredItemResponseTiny{
-		ID:   *v.ID,
-		Name: *v.Name,
-	}
-	if v.Damage != nil {
-		res.Damage = *v.Damage
-	}
-	if v.Healing != nil {
-		res.Healing = *v.Healing
-	}
-	if v.Protection != nil {
-		res.Protection = *v.Protection
-	}
-	if v.Damage == nil {
-		res.Damage = 0
-	}
-	if v.Healing == nil {
-		res.Healing = 0
-	}
-	if v.Protection == nil {
-		res.Protection = 0
+		ID:         *v.ID,
+		Name:       *v.Name,
+		Damage:     *v.Damage,
+		Healing:    *v.Healing,
+		Protection: *v.Protection,
 	}
 
 	return res
@@ -402,26 +387,11 @@ func marshalInventoryviewsStoredItemViewToStoredItemResponseTiny(v *inventoryvie
 // *inventoryviews.StoredItemView.
 func marshalInventoryviewsStoredItemViewToStoredItemResponseBodyTiny(v *inventoryviews.StoredItemView) *StoredItemResponseBodyTiny {
 	res := &StoredItemResponseBodyTiny{
-		ID:   *v.ID,
-		Name: *v.Name,
-	}
-	if v.Damage != nil {
-		res.Damage = *v.Damage
-	}
-	if v.Healing != nil {
-		res.Healing = *v.Healing
-	}
-	if v.Protection != nil {
-		res.Protection = *v.Protection
-	}
-	if v.Damage == nil {
-		res.Damage = 0
-	}
-	if v.Healing == nil {
-		res.Healing = 0
-	}
-	if v.Protection == nil {
-		res.Protection = 0
+		ID:         *v.ID,
+		Name:       *v.Name,
+		Damage:     *v.Damage,
+		Healing:    *v.Healing,
+		Protection: *v.Protection,
 	}
 
 	return res
