# gen/inventory/views/view.go
@@ -256,6 +256,15 @@ func ValidateStoredItemView(result *StoredItemView) (err error) {
 	if result.Name == nil {
 		err = goa.MergeErrors(err, goa.MissingFieldError("name", "result"))
 	}
+	if result.Damage == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("damage", "result"))
+	}
+	if result.Healing == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("healing", "result"))
+	}
+	if result.Protection == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("protection", "result"))
+	}
 	return
 }
 
@@ -267,6 +276,15 @@ func ValidateStoredItemViewTiny(result *StoredItemView) (err error) {
 	}
 	if result.Name == nil {
 		err = goa.MergeErrors(err, goa.MissingFieldError("name", "result"))
+	}
+	if result.Damage == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("damage", "result"))
+	}
+	if result.Healing == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("healing", "result"))
+	}
+	if result.Protection == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("protection", "result"))
 	}
 	return
 }
